<resources>
    <string name="app_name">Volley Test</string>
    <string name="action_settings">Settings</string>
    <string name="request_btn">Obtener JSON</string>
    <string name="image_request_btn">Obtener Imagen</string>
    <string name="picasso_image_request_btn">Obtener Imagen con Picasso</string>
    <string name="clean_btn">Limpiar campos</string>
    <string name="user_list_fragment_description">User List Fragment</string>
    <string name="user_data_btn">User data</string>
    <string name="user_list_btn">User list</string>
    <string name="image_screen_btn">Image screen</string>
</resources>
