<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical">

    <Button
        android:id="@+id/user_data_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/user_data_btn"/>

    <Button
        android:id="@+id/user_list_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/user_list_btn"/>

    <Button
        android:id="@+id/image_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/image_screen_btn"/>


</LinearLayout>