<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:paddingBottom="@dimen/activity_vertical_margin"
              android:paddingLeft="@dimen/activity_horizontal_margin"
              android:paddingRight="@dimen/activity_horizontal_margin"
              android:paddingTop="@dimen/activity_vertical_margin"
              android:layout_width="match_parent"
              android:layout_height="match_parent">

    <Button
        android:id="@+id/request_btn"
        android:text="@string/image_request_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <Button
        android:id="@+id/picasso_request_btn"
        android:text="@string/picasso_image_request_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <Button
        android:id="@+id/clean_btn"
        android:text="@string/clean_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

<ImageView
    android:id="@+id/image_container"
    android:paddingTop="40dp"
    android:layout_gravity="center_horizontal"
    android:layout_width="300dp"
    android:layout_height="wrap_content"/>


</LinearLayout>